--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,8 @@ body {
   }
 
   .indent {
-    margin-left: 20px;
+    margin-left: 140
+  px;
   }
 
   ul, ol {
@@ -45,8 +46,8 @@ body {
     white-space: nowrap;
   }
   nav {
-    margin-top: 31px;
-    margin-bottom: 31px;
+    margin-top: 13px;
+    margin-bottom: 13px;
   }
   .flex-right {
     flex-direction: row;
@@ -75,3 +76,15 @@ body {
 .desktop-menu-container { display: none;}
 
 .mobile-menu-button { background-color: transparent; border: none; cursor: pointer;}
+
+.show { display: inherit;}
+
+.mobile-menu-content li { padding: 10px; margin: 5px;}
+
+.mobile-menu-content { background-color: white; position: absolute; transform: translate(0px, 150px); z-index: 1; display: none;}
+
+#mobile-menu-image { height: 24px;}
+
+.mobile-logo { width: 80px;}
+
+.feature-image-container { background-image: url(../images/ONWARD.jpg); width: 100%; height: 90vh; background-size: cover; background-position: center; margin: 0px;}
