--- a/css/styles.css
+++ b/css/styles.css
@@ -74,16 +74,60 @@ body {
 
 .desktop-menu-container { display: none;}
 
-.mobile-menu-button { background-color: transparent; border: none; cursor: pointer;}
+.mobile-menu-container { padding-right: 4%;}
 
-.show { display: inherit;}
+.mobile-menu-button { 
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
 
 .mobile-menu-content li { padding: 10px; margin: 5px;}
 
-.mobile-menu-content { background-color: white; position: absolute; transform: translate(0px, 150px); z-index: 1; display: none;}
+.mobile-menu-content {
+  background-color: white; 
+  position: absolute; 
+  transform: translate(0px, 150px);
+  z-index: 1;
+  display: none;
+}
 
 #mobile-menu-image { height: 24px;}
 
 .mobile-logo { width: 80px;}
 
-.feature-image-container { background-image: url(../images/ONWARD.jpg); width: 100%; height: 90vh; background-size: cover; background-position: center; margin: 0px;}
+.feature-image-container {
+  background-image: url(../images/ONWARD.jpg);
+  width: 100%;
+  height: 90vh;
+  background-size: cover;
+  background-position: center;
+  margin: 0px;
+}
+
+.show { display: inherit;}
+
+@media screen and (min-width: 1220px) {
+  .mobile-logo { 
+    width: auto;
+  } 
+  .nav {
+    padding: 20px 0px;
+  }
+  .desktop-menu-container { display: flex;}
+
+.mobile-menu-container { display: none;}
+
+.nav ul {
+  padding-right: 180px
+}
+
+.headline {
+  padding-top: 200px;
+  padding-right: 30px;
+  font-weight: 900;
+  font-size: 51px;
+  letter-spacing: 0.29em;
+  line-height: 1em;
+}
+}
